Added MHA implementation

--- a/main.ipynb
+++ b/main.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# ===== Imports =====\n",
-    "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ],
@@ -71,6 +71,94 @@
    },
    "id": "1fbfb4ba6b6faffb",
    "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# ===== Predicting stock prices using Transformers =====\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "class Transformer(nn.Module):\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Complete transformer model for stock price prediction\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self,\n",
+    "                 attention_dim: int, \n",
+    "                 attention_dropout: float,\n",
+    "                 attention_heads: int,\n",
+    "                 hidden_dim: int,\n",
+    "                 perceptron_dim: int,\n",
+    "                 perceptron_dropout: float):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.attention_heads = attention_heads\n",
+    "        self.attention_dim = attention_dim\n",
+    "        self.attention_dropout = attention_dropout\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.perceptron_dim = perceptron_dim\n",
+    "        self.perceptron_dropout = perceptron_dropout\n",
+    "        \n",
+    "        self.attention = nn.MultiheadAttention(num_heads=self.attention_heads, embed_dim=self.attention_dim, dropout=self.attention_dropout)\n",
+    "        self.norm1 = nn.LayerNorm(self.hidden_dim, elementwise_affine=False, eps=1e-6)\n",
+    "        self.norm2 = nn.LayerNorm(self.hidden_dim, elementwise_affine=False, eps=1e-6)\n",
+    "        \n",
+    "        self.perceptron = nn.Sequential(\n",
+    "            nn.Linear(self.perceptron_dim, self.hidden_dim),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(self.perceptron_dropout),\n",
+    "            nn.LayerNorm(self.hidden_dim),\n",
+    "            nn.Linear(self.hidden_dim, self.perceptron_dim),\n",
+    "            nn.Dropout(self.perceptron_dropout)\n",
+    "        )\n",
+    "        \n",
+    "    def forward(self, x):\n",
+    "        \n",
+    "        query, key, value = self.norm1(x)\n",
+    "        \n",
+    "        x = x + self.attention(query, key, value)[0]\n",
+    "        x = x + self.perceptron(self.norm2(x))\n",
+    "        \n",
+    "        return x\n",
+    "        \n",
+    "\n",
+    "# # ===== Attention tester =====\n",
+    "# attention_embedding_size = 128\n",
+    "# attention_heads = 2\n",
+    "# attention_dropout = 0.1\n",
+    "# attention_hidden_dim = 128\n",
+    "# perceptron_dim = 128\n",
+    "# perceptron_dropout = 0.1\n",
+    "# \n",
+    "# x = torch.rand((3, 784, 128))\n",
+    "# \n",
+    "# attention = Transformer(attention_embedding_size, attention_dropout, attention_heads, attention_hidden_dim, perceptron_dim, perceptron_dropout)\n",
+    "# context = attention(x)\n",
+    "# print(\"Context final shape: \", context.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-17T09:30:10.799289Z",
+     "start_time": "2024-03-17T09:30:10.795568Z"
+    }
+   },
+   "id": "22f64c30a285ebef",
+   "execution_count": 6
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7d3218391b71edbd"
   }
  ],
  "metadata": {
