Added some more code for transformer training

--- a/main.ipynb
+++ b/main.ipynb
@@ -150,6 +150,34 @@
    },
    "id": "22f64c30a285ebef",
    "execution_count": 6
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import pytorch_lightning as pl\n",
+    "\n",
+    "class Model(pl.LightningModule):\n",
+    "    def __init__(self, model_kwargs, lr):\n",
+    "        super().__init__()\n",
+    "        self.model = Transformer(**model_kwargs)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        return self.model(x)\n",
+    "    \n",
+    "    def configure_optimizers(self):\n",
+    "        optimizer = torch.optim.AdamW(self.model.parameters(), lr=self.hparams.lr)\n",
+    "        lr_scheduler = torch.optim.lr_scheduler.MultiStepLR(optimizer, milestones=[50, 100], gamma=0.1)\n",
+    "        return [optimizer], [lr_scheduler]\n",
+    "    \n",
+    "    def calculate_loss(self, batch, mode='train'):\n",
+    "        \n",
+    "        "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "355f9b13ea17799b"
   }
  ],
  "metadata": {
