--- a/main.ipynb
+++ b/main.ipynb
@@ -170,9 +170,7 @@
     "        lr_scheduler = torch.optim.lr_scheduler.MultiStepLR(optimizer, milestones=[50, 100], gamma=0.1)\n",
     "        return [optimizer], [lr_scheduler]\n",
     "    \n",
-    "    def calculate_loss(self, batch, mode='train'):\n",
-    "        \n",
-    "        "
+    "    def calculate_loss(self, batch, mode='train'):"
    ],
    "metadata": {
     "collapsed": false
