--- a/main.ipynb
+++ b/main.ipynb
@@ -168,9 +168,7 @@
     "    def configure_optimizers(self):\n",
     "        optimizer = torch.optim.AdamW(self.model.parameters(), lr=self.hparams.lr)\n",
     "        lr_scheduler = torch.optim.lr_scheduler.MultiStepLR(optimizer, milestones=[50, 100], gamma=0.1)\n",
-    "        return [optimizer], [lr_scheduler]\n",
-    "    \n",
-    "    def calculate_loss(self, batch, mode='train'):"
+    "        return [optimizer], [lr_scheduler]"
    ],
    "metadata": {
     "collapsed": false
