--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "# ===== Data loading and plotting =====\n",
     "\n",
-    "dataset = pd.read_csv('dataset/FTSE TWSE Taiwan 50 Index.csv')\n",
+    "dataset = pd.read_csv('dataset/taiwan50.csv')\n",
     "\n",
     "# Since we will be predicting the price index, we will be making a dataframe with the values we'd like to predict\n",
     "# I am lazy, so we just drop the unused columns instead\n",
